[gd_scene load_steps=4 format=1]

[ext_resource path="res://competition.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture" id=2]
[ext_resource path="res://dani_alpha.fnt" type="BitmapFont" id=3]

[node name="competition" type="Node2D"]

transform/pos = Vector2( 511.609, 299.032 )
transform/scale = Vector2( 15.988, 9.34513 )
script/script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]

transform/pos = Vector2( -0.029665, 0.33674 )
transform/scale = Vector2( 0.0498035, 0.0916558 )
texture = ExtResource( 2 )

[node name="cash" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -22.0
margin/top = -15.0
margin/right = 86.0
margin/bottom = 38.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Cash:"
visible_characters = -1

[node name="net_worth" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = -8.0
margin/right = 184.0
margin/bottom = 45.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Net Worth:"
visible_characters = -1

[node name="sales_made" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -27.0
margin/top = -1.0
margin/right = 185.0
margin/bottom = 52.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Sales Made:"
visible_characters = -1

[node name="sales_lost" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -26.0
margin/top = 6.0
margin/right = 161.0
margin/bottom = 61.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Sales Lost:"
visible_characters = -1

[node name="market_share" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -29.0
margin/top = 13.0
margin/right = 230.0
margin/bottom = 66.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Market Share:"
visible_characters = -1

[node name="player_name" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -13.0
margin/top = -25.0
margin/right = 239.0
margin/bottom = 28.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Player's Name"
visible_characters = -1

[node name="competition_one" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 2.0
margin/top = -25.0
margin/right = 258.0
margin/bottom = 28.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Competitor #1"
visible_characters = -1

[node name="competition_two" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 17.0
margin/top = -25.0
margin/right = 273.0
margin/bottom = 28.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = "Competitor #2"
visible_characters = -1

[node name="player_cash_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -11.0
margin/top = -15.0
margin/right = 171.0
margin/bottom = 37.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_1_cash_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = -15.0
margin/right = 185.0
margin/bottom = 37.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_2_cash_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = -15.0
margin/right = 200.0
margin/bottom = 37.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="player_net_worth_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -11.0
margin/top = -8.0
margin/right = 171.0
margin/bottom = 44.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_1_net_wort_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = -8.0
margin/right = 185.0
margin/bottom = 44.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_2_net_worth_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = -8.0
margin/right = 200.0
margin/bottom = 44.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="player_sales_made_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -11.0
margin/top = -2.0
margin/right = 171.0
margin/bottom = 50.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_1_sales_made_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = -2.0
margin/right = 185.0
margin/bottom = 51.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_2_sales_made_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = -2.0
margin/right = 200.0
margin/bottom = 50.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="player_sales_lost_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -11.0
margin/top = 6.0
margin/right = 171.0
margin/bottom = 58.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_1_sales_lost_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 6.0
margin/right = 185.0
margin/bottom = 59.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_2_sales_lost_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 6.0
margin/right = 200.0
margin/bottom = 58.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="player_market_share_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -11.0
margin/top = 13.0
margin/right = 171.0
margin/bottom = 65.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_1_market_share_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 3.0
margin/top = 13.0
margin/right = 185.0
margin/bottom = 66.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1

[node name="comp_2_market_share_output" type="RichTextLabel" parent="."]

rect/scale = Vector2( 0.05, 0.1 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 18.0
margin/top = 13.0
margin/right = 200.0
margin/bottom = 65.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode/enabled = false
bbcode/bbcode = ""
visible_characters = -1


